fft module bugfix

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "description": "A basic data acquisition script",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "tinybuild",
     "build": "tinybuild build",
